# Bindubasini

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
notice/: admin.py  apps.py  models.py
notice/migrations/: 0001_initial.py
school/: admin.py  apps.py  context_processors.py  models.py  urls.py  views.py
school/migrations/: 0001_initial.py  0002_club_developerinfo_delete_facility.py
static/css/: admin.css  style.css
static/js/: admin.js  main.js
templates/school/: about.html  achievements.html  alumni.html  base.html  clubs.html  contact.html  developer.html  facilities.html  headmasters.html  home.html  notices.html  teachers.html
