[project]
name = "bindubasini-school"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.19",
    "dj-database-url>=3.1.2",
    "django>=6.0.5",
    "django-jazzmin>=3.0.4",
    "django-storages>=1.14.6",
    "gunicorn>=26.0.0",
    "pillow>=12.2.0",
    "psycopg2>=2.9.12",
    "python-decouple>=3.8",
    "python-dotenv>=1.2.2",
    "waitress>=3.0.2",
    "whitenoise>=6.12.0",
]
